...
    <string name="login_password">Password</string>
    <string name="login_enter_first_name">Please enter your first name</string>
    <string name="login_Verification_title">Verification</string>
    <string name="login_resend_code">Resend code</string>
    <string name="login_need_help">I need help</string>
    <string name="login_enter_code">Enter the 4-digit code we sent you</string>
    <string name="login_option_title">Sign in</string>
    <string name="login_option_google">Sign in with Google</string>
    <string name="login_option_email">Sign in with email</string>
    <string name="login_option_guest">Continue as Guest</string>
    <string name="login_option_other">Explore other Sign-in options</string>
    <string name="login_email">Email</string>
    <string name="login_email_title">Sign in or create account</string>
    <string name="login_email_enter">Enter your email</string>
    <string name="login_email_enter_msg">Please enter your email address. We\'ll send you a verification code to keep your account secure.</string>
    <string name="login_email_error_msg">Email address incorrect</string>
    <string name="login_email_password">Password</string>
    <string name="login_email_password_enter">Enter a password</string>
    <string name="login_email_password_new">New Password</string>
    <string name="login_email_password_confirm">Confirm Password</string>
    <string name="login_email_password_create_title">Sign-in with email address</string>
    <string name="login_email_password_create">Create a password</string>
    <string name="login_email_password_create_msg">Create a strong password that you will use to sign in</string>
    <string name="login_email_password_length_msg">The password must be at least %d characters.</string>
...
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="delete">Delete</string>
    <string name="select">Select</string>
    <string name="change">Change</string>
    <string name="add">Add</string>
    <string name="continue_">Continue</string>

    <!--Payment-->
    <string name="payment_method_add">Add Payment Method</string>
    <string name="payment_card_add">Add Card</string>
    <string name="payment_card_scan">Scan Card</string>
    <string name="payment_default">Default Method</string>
...
